# lucaria

./: .gitignore  CMakeLists.txt  LICENSE  README.md  todo.txt  winassets.bat  windeploy.bat  winlocal.bat  winvisit.bat
client/: CMakeLists.txt
client/source/: main.cpp  shell.html
client/source/core/: animation.cpp  animation.hpp  armature.cpp  armature.hpp  audio.cpp  audio.hpp  cubemap.cpp  cubemap.hpp  fetch.cpp  fetch.hpp  fetch.inl  font.cpp  font.hpp  graphics.cpp  graphics.hpp  hash.cpp  hash.hpp  layer.hpp  load.cpp  load.hpp  material.cpp  material.hpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  model.hpp  moveset.hpp  navmesh.cpp  navmesh.hpp  program.cpp  program.hpp  shape.cpp  shape.hpp  skeleton.cpp  skeleton.hpp  skybox.hpp  sound.cpp  sound.hpp  texture.cpp  (+8 more)
client/source/glue/: audio.cpp  audio.hpp  fetch.cpp  fetch.hpp  fetch.inl  graphics.cpp  graphics.hpp  update.cpp  update.hpp  window.cpp  window.hpp
client/source/levels/: __lifetimelong.cpp  levels.hpp  room.cpp  room_001.cpp
client/source/scene/: camera.cpp  controller.cpp  room.cpp  scene.hpp  skybox.cpp  splash.cpp  splash.inl
compiler/: CMakeLists.txt
compiler/source/: main.cpp
compiler/source/core/: armature.cpp  font.cpp  font.hpp  import.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  sound.cpp  sound.hpp  texture.cpp  texture.hpp
compiler/source/export/: binary.cpp  binary.hpp  vorbis.cpp  vorbis.hpp
compiler/source/import/: armature.cpp  assimp.cpp  assimp.hpp  audiofile.cpp  audiofile.hpp  mesh.cpp  shader.cpp  stb.cpp  stb.hpp  text.cpp  text.hpp  texture.cpp  volume.cpp
compiler/source/tool/: etcpak.cpp  gltf2ozz.cpp  gltf2ozz.hpp  oggenc.cpp  oggenc.hpp  woff2_compress.cpp  woff2_compress.hpp
source/: CMakeLists.txt
source/client/: CMakeLists.txt
source/client/component/: animator.cpp  collider.cpp  interface.cpp  model.cpp  rigidbody.cpp  speaker.cpp  transform.cpp
source/client/core/: animation.cpp  audio.cpp  cubemap.cpp  database.cpp  error.cpp  event_track.cpp  fetch.cpp  font.cpp  framebuffer.cpp  game_threads.cpp  geometry.cpp  graphics.cpp  gsl_compiler.cpp  gsl_template.cpp.in  hash.cpp  image.cpp  input.cpp  load.cpp  main_android.cpp  main_psp.cpp  main_web.cpp  manager_assets.cpp  manager_game.cpp  manager_object.cpp  manager_scene.cpp  manager_window.cpp  manager_window_android.cpp  manager_window_glfw.cpp  manager_window_web.cpp  math.cpp  mesh.cpp  motion_track.cpp  object_animation.cpp  object_audio.cpp  object_cubemap.cpp  object_cubemap_opengl.cpp  object_event_track.cpp  object_font.cpp  object_framebuffer_pspgu.cpp  object_geometry.cpp  (+50 more)
source/client/ecs/: rendering.cpp  speaker.cpp  transform.cpp
source/client/engine/: asset_animation.cpp  asset_audio.cpp  asset_event_track.cpp  asset_geometry.cpp  asset_motion_track.cpp  component_rigidbody.cpp  context_dynamics.cpp  context_input.cpp  context_mixer.cpp  context_object.cpp  context_rendering.cpp  object_image.cpp  object_skeleton.cpp
source/client/entity/: animator.cpp  dynamics.cpp  entity.cpp  game.cpp  interface.cpp  mixer.cpp  motion.cpp  rendering.cpp  rigidbody.cpp  scene.cpp  speaker.cpp  transform.cpp
source/client/public/: component_animator.cpp  component_interface.cpp  component_model.cpp  component_rigidbody.cpp  component_speaker.cpp  component_transform.cpp  context_dynamics.cpp  context_game.cpp  context_input.cpp  context_mixer.cpp  context_object.cpp  context_rendering.cpp  context_scene.cpp  context_window.cpp  handle_entity.cpp  handle_object.cpp
source/client/system/: dynamics.cpp  mixer.cpp  motion.cpp  rendering.cpp
source/compiler/: CMakeLists.txt  main.cpp
source/compiler/export/: binary.cpp  binary.hpp
source/compiler/import/: assimp.cpp  assimp.hpp  json.cpp  json.hpp  stb.cpp  stb.hpp  text.cpp  text.hpp
source/compiler/profiler/: profiler_tracy.cpp
source/compiler/tool/: etcpak.cpp  gltf2ozz.cpp
source/core/: gsl_template.cpp.in  main_android.cpp  main_psp.cpp  manager_assets.cpp  manager_game.cpp  manager_window.cpp  manager_window_android.cpp  manager_window_glfw.cpp  manager_window_psp.cpp  rendering_cubemap_opengl.cpp  rendering_cubemap_vulkan.cpp  rendering_framebuffer_opengl.cpp  rendering_framebuffer_pspgu.cpp  rendering_framebuffer_vulkan.cpp  rendering_mesh_vulkan.cpp  rendering_program_pspgu.cpp  rendering_program_vulkan.cpp  rendering_renderbuffer_pspgu.cpp  rendering_renderbuffer_vulkan.cpp  rendering_storage_vulkan.cpp  rendering_texture_opengl.cpp  rendering_texture_pspgu.cpp  rendering_texture_vulkan.cpp  rendering_vulkan.cpp  systems_rendering.cpp  utils_error.cpp  utils_filewatch.cpp  utils_glfw.cpp  utils_refcount.cpp  utils_reload_linux.cpp
source/engine/: asset_audio.cpp  asset_geometry.cpp  asset_image.cpp  asset_mesh.cpp  asset_sound_track.cpp  component_animator.cpp  component_interface.cpp  component_rigidbody.cpp  context_game.cpp  context_object.cpp  context_rendering.cpp  context_scene.cpp  handle_entity.cpp  handle_object.cpp
source/game/: CMakeLists.txt  shell.html
source/game/android/: build.gradle.kts  settings.gradle.kts
source/runtime/: CMakeLists.txt
source/runtime/core/: gsl_compiler.cpp  manager_assets.cpp  manager_game.cpp  manager_window.cpp  rendering_program.cpp  rendering_shader.cpp  rendering_storage.cpp  serialize_assets.cpp  serialize_mappings.cpp  serialize_scenes.cpp  systems_dynamics.cpp  systems_mixer.cpp  systems_motion.cpp  systems_rendering.cpp  utils_error.cpp  utils_options.cpp  utils_owning.cpp  utils_reload.cpp
source/runtime/engine/: asset_animation.cpp  asset_audio.cpp  asset_cubemap.cpp  asset_event_track.cpp  asset_font.cpp  asset_geometry.cpp  asset_image.cpp  asset_mesh.cpp  asset_shape.cpp  asset_skeleton.cpp  asset_sound_track.cpp  asset_texture.cpp  component_interface.cpp  component_speaker.cpp  component_transform.cpp  context_mixer.cpp  context_object.cpp  context_rendering.cpp  context_window.cpp  handle_object.cpp
tool/binc/: CMakeLists.txt  main.cpp
tool/binc/binc/: compile_bin.cpp  compile_bin.hpp  (+15 more)
tool/tracyp/: CMakeLists.txt  main.cpp  profiler_tracy.hpp
(+475 files in other folders)
